basics + spline file

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     
     <script type="importmap">
         {
-            "imports": {
-                "three": "https://cdn.jsdelivr.net/npm/three@0.166.1/build/three.module.js",
-      "jsm/": "https://cdn.jsdelivr.net/npm/three@0.166.1/examples/jsm/"
-    }
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.166.1/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.166.1/examples/jsm/"
+          }
         }
-    </script>
+      </script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
